--- a/about.html
+++ b/about.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Background and rain animation already in your CSS -->
     <header>
         <h1 style="color: white; text-align:center; padding-top: 40px;">About Me</h1>
     </header>
 
-    <main style="color:white; text-align:center; max-width:800px; margin:auto; padding:40px;">
-        <p>
-            Hi! I'm <strong>Samantha Martinez</strong> — a creative developer who loves combining art,
-            animation, and code to make cozy, interactive web experiences 🌧✨.
-        </p>
-        <p>
-            I enjoy building websites, experimenting with pixel art, and bringing stories to life through design.
-        </p>
-        <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
-    </main>
+<main class="about-content-box" style="color:white; text-align:center;">
+    
+    <img src="images/selfie.png" alt="Samantha Martinez Selfie" class="profile-pic">
+    
+    <p> 
+        Hi! I'm <strong>Samantha Martinez</strong> — a creative developer who loves combining art,
+        animation, and code to make cozy, interactive web experiences ⋆.ೃ࿔* :･🍃⋆.ೃ࿔* :･
+    </p>
+    <p>
+        I enjoy building websites, experimenting with pixel art, and bringing stories to life through design.
+    </p>
+    <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
+</main>
 
     <script src="script.js"></script>
 </body>
