added my mental health project to the projects section

--- a/projects.html
+++ b/projects.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color:white; text-align:center; padding-top:40px;">My Projects</h1>
+    <h1 style="color:white; text-align:center; padding-top:20px;">My Projects</h1>
+<main style="color:white; text-align:center; max-width:900px; margin:auto; padding:40px;">
+   <p><strong>Here are some of the projects I’ve worked on recently:</strong></p>
 
-    <main style="color:white; text-align:center; max-width:900px; margin:auto; padding:40px;">
-        <p>Here are some of the projects I’ve worked on recently:</p>
-
-        <ul style="list-style:none; padding:0;">
-            <li>🌸 <strong>Portfolio Website</strong> — A cozy interactive homepage built with CSS animations.</li>
-            <li>🐾 <strong>Catbus Tracker</strong> — A playful JavaScript app for exploring transport routes.</li>
-            <li>🌲 <strong>Rain Scene</strong> — A personal art and code experiment for pixel rain effects.</li>
-        </ul>
-
-        <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
-    </main>
+    <a href="https://github.com/StephenC959/ProjectOne.git" target="_blank" class="project-card">
+         <img src="images/mental.png" alt="Project One screenshot" class="project-image">
+        <div class="project-info">
+            <h3>The Mental Health Expert System</h3>
+            <p>This project is an intelligent computer expert system for a mental health clinic to diagnose mental disorders by using the AI methodology of backward chaining. After the disease has been diagnosed, the system will recommend a treatment by using the AI methodology of forward chaining.</p>
+        </div>
+    </a>
+    
+    <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
+</main>
 </body>
 </html>
