--- a/socials.html
+++ b/socials.html
@@ -18,6 +18,8 @@
         </p>
 
         <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
+
+          <img src="images/moving.gif" alt="Soot Sprites" class="soot-sprite-gif">
     </main>
 </body>
 </html>
