--- a/socials.html
+++ b/socials.html
@@ -12,14 +12,13 @@
     <main style="color:white; text-align:center; max-width:800px; margin:auto; padding:40px;">
         <p>Let’s connect! 🌿</p>
         <p>
-            <a href="https://github.com/" target="_blank" style="color:#9ad0ec;">GitHub</a> |
-            <a href="https://linkedin.com/" target="_blank" style="color:#9ad0ec;">LinkedIn</a> |
-            <a href="https://twitter.com/" target="_blank" style="color:#9ad0ec;">Twitter</a>
+            <a href="https://github.com/SamMtz534" target="_blank" style="color:#9ad0ec;">GitHub</a> |
+            <a href="https://www.linkedin.com/in/samantha-martinez-52a096246/" target="_blank" style="color:#9ad0ec;">LinkedIn</a> |
+            <a href="https://twitter.com/YourHandleHere" target="_blank" style="color:#9ad0ec;">Twitter</a>
         </p>
 
         <a href="index.html" style="color: #9ad0ec; display:block; margin-top:40px;">← Back to Home</a>
 
-          <img src="images/moving.gif" alt="Soot Sprites" class="soot-sprite-gif">
     </main>
 </body>
 </html>
